setting up database

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 POSTGRES_PASSWORD="Ganteng"
 POSTGRES_USER="postgres"
+POSTGRES_HOST="127.0.0.1"
+POSTGRES_DATABASE="'smart-brain'"
+
 API_KEY='fcec398626b641dba591e12a8d048059'
 PORT='3000'
