add dadtabase env

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-POSTGRES_PASSWORD="Ganteng"
-POSTGRES_USER="postgres"
-POSTGRES_HOST="127.0.0.1"
-POSTGRES_DATABASE="'smart-brain'"
+POSTGRES_URL="postgres://default:GDywoPLC5f2c@ep-raspy-mode-94610734-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:GDywoPLC5f2c@ep-raspy-mode-94610734-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:GDywoPLC5f2c@ep-raspy-mode-94610734.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-raspy-mode-94610734-pooler.ap-southeast-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="GDywoPLC5f2c"
+POSTGRES_DATABASE="verceldb"
 
 API_KEY='fcec398626b641dba591e12a8d048059'
 PORT='3000'
